--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,14 +3,10 @@ body {
 }
 
 .brand {
-    font-family: Lato, sans-serif;
+    font-family: "Sour Gummy", sans-serif;
     font-size: 1.4rem;
     font-weight: 700;
     color: #505d66;
-}
-
-.red-o {
-    color: #E84610;
 }
 
 .thin {
@@ -163,4 +159,29 @@ body {
 
 .approval {
     color: rgb(222, 187, 146);
+}
+
+.navbar {
+    font-family: "Poppins", sans-serif;
+    color: #f68b05;
+    background:#cdc48a;
+    text-decoration: none;
+}
+
+.nav-logo {
+    height: 5rem;
+    width: 5rem;
+    position: relative;
+    overflow: hidden;
+
+}
+
+.navlink:hover {
+    color: #d71b21;
+}
+
+.navlink:visited {
+    color: #d71b21;
+    background:transparent;
+    text-decoration: underline;
 }
