--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -27,8 +27,18 @@
     <div class="row">
         <div class="col card mb-4  mt-3 left  top">
             <div class="card-body">
-                <!-- The post content goes inside the card-text. -->
-                <!-- Use the | safe filter inside the template tags -->
+                <div class="recipe-section">
+                    <h3>Ingredients:</h3>
+                    <ul>
+                        <ul>
+                        {% for ingredient in ingredients %}
+                            <li>{{ ingredient.quantity }} {{ ingredient.unit }} of {{ ingredient.name }}</li>
+                        {% empty %}
+                            <li>No ingredients available for this recipe.</li>
+                        {% endfor %}
+                        </ul>
+                    </ul>
+                </div>
                 <article class="card-text">
                     {{ post.content | safe }}
                 </article>
