--- a/static/css/style.css
+++ b/static/css/style.css
@@ -39,7 +39,9 @@ body {
     bottom: 5%;
     min-width: 30%;
     left: -2px;
-    background-color: #d71b21;
+    background-color:rgba(221, 123, 32, 0.5);
+    color: #fff7ed;
+    font-family: "Poppins", sans-serif;
 }
 
 .scale {
@@ -184,4 +186,8 @@ body {
     color: #d71b21;
     background:transparent;
     text-decoration: underline;
+}
+
+.footer {
+    background-color: #cdc48a;
 }
