--- a/templates/base.html
+++ b/templates/base.html
@@ -98,9 +98,9 @@
     </main>
 
     <!-- Footer -->
-    <footer class="footer mt-auto py-3 dark-bg">
+    <footer class="footer mt-auto py-3">
         <p class="m-0 text-center text-white">
-      {% block copyright %}Made by You{% endblock copyright %}
+      {% block copyright %}Made for You{% endblock copyright %}
 </p>
         <p class="m-0 text-center text-white">Follow us: <i class="fab fa-facebook-square ms-3"></i>
             <i class="fab fa-twitter-square ms-3"></i>
