--- a/about/templates/about.html
+++ b/about/templates/about.html
@@ -4,31 +4,23 @@
 
 {% block content %}
 <div class="container mt-5">
-    <div class="row">
-        <div class="col-12 col-md-4 text-center">
-            {% if "placeholder" in about.profile_image.url %}
-            <img src="{% static 'images/nobody.jpg' %}" class="profile-image" alt="{{ about.title }}">
-            {% else %}
-            <img src="{{ about.profile_image.url }}" class="profile-image" alt="{{ about.title }}">
-            {% endif %}
-        </div>
-        <div class="col-12 col-md-8">
-            <h2>{{ about.title }}</h2>
-            {{ about.content | safe }}
-        </div>
-    </div>
     <div class="row justify-content-center">
         <div class="col-12 col-md-6 my-5">
-            <h2>Let's collaborate!</h2>
-            <p>I believe in the power of shared knowledge and collective effort.
-                Whether you have a project in mind, wish to co-author
-                an article, or simply want to brainstorm some ideas,
-                I'm excited to hear from you. Fill out the form
-                and we can get the ball rolling!</p>
+            <h2>Upload Recipe Here!</h2>
+            <p>Please use the form below to upload your yummy recipes for all to try.</p>
 
-            <form method="post">
-                {{ collaborate_form | crispy }}
+            <form method="post" enctype="multipart/form-data">
                 {% csrf_token %}
+                <h3>Recipe Details</h3>
+                {{ recipe_upload_form|crispy }}  <!-- Render RecipeUploadForm with crispy-forms -->
+
+                <h3>Ingredients</h3>
+                {% for form in ingredient_formset %}
+                    <div class="form-group">
+                        {{ form|crispy }}  <!-- Render Ingredient forms with crispy-forms -->
+                    </div>
+                {% endfor %}
+
                 <button class="btn btn-secondary" type="submit">Submit</button>
             </form>
         </div>
