--- a/templates/base.html
+++ b/templates/base.html
@@ -48,7 +48,7 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link {% if request.path == about_url %}active" aria-current="page{% endif %}"
-                            href="{% url 'about' %}">About</a>
+                            href="{% url 'about' %}">Add Your Recipe</a>
                     </li>
                     {% if user.is_authenticated %}
                     <li class="nav-item">
