--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,7 @@
 {% load static %}
 
 {% url 'home' as home_url %}
-{% url 'about' as about_url %}
+{% url 'recipe_upload' as recipe_upload_url %}
 {% url 'account_login' as login_url %}
 {% url 'account_signup' as signup_url %}
 {% url 'account_logout' as logout_url %}
@@ -38,7 +38,7 @@
             <a class="navbar-brand" href="{% url 'home' %}"><span><img src="{% static 'images/logo.png' %}" alt="The Recipe Book Logo" class="nav-logo"></span></span></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
                 aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+                <i class="fa-solid fa-bars"></i>
             </button>
             <div class="collapse navbar-collapse" id="navbarText">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -47,8 +47,8 @@
                             href="{% url 'home' %}">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link {% if request.path == about_url %}active" aria-current="page{% endif %}"
-                            href="{% url 'about' %}">Add Your Recipe</a>
+                        <a class="nav-link {% if request.path == recipe_upload %}active" aria-current="page{% endif %}"
+                            href="{% url 'recipe_upload' %}">Add Your Recipe</a>
                     </li>
                     {% if user.is_authenticated %}
                     <li class="nav-item">
