--- a/recipe_upload/templates/recipe_upload/recipe_upload.html
+++ b/recipe_upload/templates/recipe_upload/recipe_upload.html
@@ -6,7 +6,8 @@
     <div class="row justify-content-center">
         <div class="col-12 col-md-6 my-5">
             <h2>Upload Recipe Here!</h2>
-            <p>Please use the form below to upload your yummy recipes for all to try.</p>
+            <p>Please use the form below to upload your yummy recipes for all to try. 
+                The admin team will review your recipe and upload it shortly.</p>
 
             <form method="post" enctype="multipart/form-data">
                 {% csrf_token %}
