read me updated

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,7 +8,7 @@ body {
 }
 
 .fa-bars {
-    color:#f68b05
+    color:#683B03;
 }
 
 .hero-img {
@@ -43,7 +43,7 @@ hr.rounded {
 
 .hero-heading {
     font-family: "Sour Gummy", sans-serif;
-    color:#f68b05;
+    color:#683B03;
 }
 
 .brand {
