--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
 
 <head>
     <title>The Recipe Book</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
     <!-- Google Fonts CSS -->
     <style>
@@ -35,7 +35,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-            <a class="navbar-brand" href="{% url 'home' %}"><span><img src="{% static 'images/logo.png' %}" alt="The Recipe Book Logo" class="nav-logo"></span></span></a>
+            <a class="navbar-brand" href="{% url 'home' %}"><span><img src="{% static 'images/logo.png' %}" alt="The Recipe Book Logo" class="nav-logo"></span></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
                 aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                 <i class="fa-solid fa-bars"></i>
